white space fixed

--- a/css/style.css
+++ b/css/style.css
@@ -33,37 +33,47 @@ nav h1{
 }
 menu{
     background-color: #b5ff08;
+    margin-top: auto;
     padding-top: 2px;
     padding-bottom: 2.2em;
+    margin-bottom: auto;
+}
+menu h1{
+    font-size: 2.6em;
+}
+menu a{
+    font-size: 1.5em;
 }
 menu a:link{
     text-decoration: none;
-    color:#0026ff;
+    color:#0626d9;
 }
 menu a:visited{
     text-decoration: none;
-    color:#0026ff;
+    color:#0626d9;
 }
 menu a:hover{
     text-decoration: none;
-    color:#bf00ff;
+    color:#8000ff;
 }
 menu a:active{
     text-decoration: none;
-    color:#bf00ff;
+    color:#8000ff;
 }
 main{
     background-color: #fee50b;
+    margin-bottom: auto;
+    padding-top: 2em;
+    padding-bottom: 1.4em;
 }
 .main-layout{
-    margin:1.15em;
     display:grid;
     height:100%;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr ;
 }
 main h1{
+    margin-top:auto;
     margin-left:2.6%;
-    margin-top:5%;
     margin-bottom:5%;
 }
 main img{
@@ -74,9 +84,12 @@ main img{
 }
 footer{
     background-color: #0b02bc;
+    padding-top: 1em;
+    padding-bottom: 0.2em;
 }
 footer p{
     margin-left:2.6%;
     font-size: 1.7em;
     color:#ffffff;
+    margin-top: auto;
 }
